authorize role and scope
