# public/swagger.json
@@ -7,14 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-			"SuccessResponse_string_": {
-=======
-			"SuccessResponse____": {
->>>>>>> db0fbe1e0affaeac8d1347219f9363e6721c166e
-=======
 			"Gender": {
 				"enum": [
 					"male",
@@ -25,23 +17,10 @@
 				"type": "string"
 			},
 			"User": {
->>>>>>> 209dcf86d55cc0ec0b75fa19bb00c38ebe59c93b
-=======
-			"SuccessResponse_string_": {
->>>>>>> feature/mockdata
 				"properties": {
 					"id": {
 						"type": "string"
 					},
-<<<<<<< HEAD
-					"result": {
-						"type": "string"
-<<<<<<< HEAD
-=======
-						"properties": {},
-						"type": "object"
->>>>>>> db0fbe1e0affaeac8d1347219f9363e6721c166e
-=======
 					"firstName": {
 						"type": "string"
 					},
@@ -69,7 +48,7 @@
 						"type": "string",
 						"format": "date-time"
 					},
-					"sesssion": {
+					"sesssions": {
 						"items": {
 							"$ref": "#/components/schemas/Session"
 						},
@@ -80,9 +59,6 @@
 							"$ref": "#/components/schemas/UserRole"
 						},
 						"type": "array"
->>>>>>> 209dcf86d55cc0ec0b75fa19bb00c38ebe59c93b
-=======
->>>>>>> feature/mockdata
 					}
 				},
 				"required": [
@@ -93,11 +69,19 @@
 					"password",
 					"createdAt",
 					"updatedAt",
-					"sesssion",
+					"sesssions",
 					"userRoles"
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"SessionStatus": {
+				"enum": [
+					"active",
+					"expired",
+					"terminated"
+				],
+				"type": "string"
 			},
 			"Session": {
 				"properties": {
@@ -107,7 +91,10 @@
 					"user": {
 						"$ref": "#/components/schemas/User"
 					},
-					"token": {
+					"accessToken": {
+						"type": "string"
+					},
+					"refreshToken": {
 						"type": "string"
 					},
 					"expireAt": {
@@ -125,12 +112,19 @@
 					"updatedAt": {
 						"type": "string",
 						"format": "date-time"
+					},
+					"lastAccessed": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"status": {
+						"$ref": "#/components/schemas/SessionStatus"
 					}
 				},
 				"required": [
 					"id",
 					"user",
-					"token",
+					"accessToken",
 					"expireAt",
 					"createdAt",
 					"updatedAt"
@@ -195,47 +189,92 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Gender": {
-				"enum": [
-					"male",
-					"female",
-					"other",
-					"unknown"
-				],
-				"type": "string"
-			},
-			"ICreateUser": {
+			"TokenResponseDTO": {
 				"properties": {
-					"id": {
+					"accessToken": {
 						"type": "string"
 					},
+					"refreshToken": {
+						"type": "string"
+					},
+					"expireAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"accessToken",
+					"expireAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SuccessResponse_TokenResponseDTO_": {
+				"properties": {
+					"code": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "string",
+								"enum": [
+									""
+								]
+							}
+						]
+					},
+					"message": {
+						"type": "string"
+					},
+					"result": {
+						"$ref": "#/components/schemas/TokenResponseDTO"
+					}
+				},
+				"required": [
+					"code",
+					"message",
+					"result"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IRegisterUser": {
+				"properties": {
 					"firstName": {
 						"type": "string"
 					},
 					"lastName": {
 						"type": "string"
 					},
-					"gender": {
-						"$ref": "#/components/schemas/Gender"
-					},
 					"email": {
 						"type": "string"
 					},
+					"gender": {
+						"$ref": "#/components/schemas/Gender"
+					},
 					"password": {
 						"type": "string"
+					},
+					"roles": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
 					"firstName",
 					"lastName",
-					"gender",
 					"email",
-					"password"
+					"gender",
+					"password",
+					"roles"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"LoginInfor": {
+			"ILoginUser": {
 				"properties": {
 					"email": {
 						"type": "string"
@@ -247,6 +286,40 @@
 				"required": [
 					"email",
 					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SuccessResponse_null_": {
+				"properties": {
+					"code": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "string",
+								"enum": [
+									""
+								]
+							}
+						]
+					},
+					"message": {
+						"type": "string"
+					},
+					"result": {
+						"type": "number",
+						"enum": [
+							null
+						],
+						"nullable": true
+					}
+				},
+				"required": [
+					"code",
+					"message",
+					"result"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -255,7 +328,7 @@
 		"securitySchemes": {}
 	},
 	"info": {
-		"title": "expressandtypescripttemplate",
+		"title": "authenticationwithkeycloak",
 		"version": "1.0.0",
 		"license": {
 			"name": "MIT"
@@ -272,22 +345,10 @@
 						"content": {
 							"application/json": {
 								"schema": {
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-									"$ref": "#/components/schemas/SuccessResponse_string_"
-=======
-									"$ref": "#/components/schemas/SuccessResponse____"
->>>>>>> db0fbe1e0affaeac8d1347219f9363e6721c166e
-=======
 									"items": {
 										"$ref": "#/components/schemas/User"
 									},
 									"type": "array"
->>>>>>> 209dcf86d55cc0ec0b75fa19bb00c38ebe59c93b
-=======
-									"type": "string"
->>>>>>> feature/mockdata
 								}
 							}
 						}
@@ -297,21 +358,24 @@
 				"parameters": []
 			}
 		},
-		"/api/v1/users": {
+		"/api/v1/auth/register": {
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "Register",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_string_"
+									"$ref": "#/components/schemas/SuccessResponse_TokenResponseDTO_"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Authentication"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -319,56 +383,11 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ICreateUser"
+								"$ref": "#/components/schemas/IRegisterUser"
 							}
 						}
 					}
 				}
-			},
-			"get": {
-				"operationId": "GetAllUsers",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_string_"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
-		"/api/v1/users/{id}": {
-			"delete": {
-				"operationId": "DeleteUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_string_"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
 			}
 		},
 		"/api/v1/auth/login": {
@@ -380,12 +399,15 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_string_"
+									"$ref": "#/components/schemas/SuccessResponse_TokenResponseDTO_"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Authentication"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -393,11 +415,42 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/LoginInfor"
+								"$ref": "#/components/schemas/ILoginUser"
 							}
 						}
 					}
 				}
+			}
+		},
+		"/api/v1/auth/logout": {
+			"get": {
+				"operationId": "Logout",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SuccessResponse_null_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "header",
+						"name": "X-access-token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
